k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-fastapi
  labels:
    app: hello-fastapi
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-fastapi
  template:
    metadata:
      labels:
        app: hello-fastapi
    spec:
      containers:
        - name: hello-fastapi
          image: docker.io/naliniudayt/fastapi-distroless:9f63998
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 20
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
