k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-fastapi
spec:
  selector:
    app: hello-fastapi
  ports:
    - port: 80
      targetPort: 8000
  type: ClusterIP
